--- a/query/package.json
+++ b/query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-bus",
+  "name": "query",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
